# opencore_rustroops

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/agents/: domain.md
src/: lib.rs  main.rs
src/api/: chat_provider.rs  credential_store.rs  credentials.rs  http_runtime.rs  mod.rs  model_info.rs  openrouter_client.rs  openrouter_provider.rs  speed_mode.rs
src/api/fixtures/: openrouter_model.json
src/app/: app_boot.rs  app_desktop.rs  app_state.rs  boot.rs  gpui_callbacks.rs  mod.rs  state.rs  window_placement.rs
src/app/onboarding/: mod.rs  onboarding_draw.rs  onboarding_feature_card_icon.rs  onboarding_galaxy_orb.rs  onboarding_scene_backdrop.rs  onboarding_theme_toggle.rs  onboarding_ui_state.rs  onboarding_view.rs
src/app/shell/: mod.rs
src/chat/: chat_state.rs  chat_store.rs  chat_view.rs  composer_actions.rs  composer_toolbar.rs  context_window_ring.rs  conversation_picker.rs  credential_dialog.rs  credential_ui.rs  credentials_banner.rs  generation_settings.rs  generation_ui.rs  instructions_dialog.rs  markdown_render.rs  mod.rs  model_catalog_store.rs  model_picker.rs  stream_indicator.rs
src/shared/: mod.rs
src/shared/preferences/: mod.rs
src/shared/theme/: mod.rs
